--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -731,6 +731,9 @@ p {
 .home-product a {
     float: none!important;
 }
+.page-template-home > section {
+    background: #1d378b;
+}
 .section-home-readmore>wrapper {
     padding: 100px 0;
 }
@@ -772,6 +775,7 @@ p {
 }
 .home-featured-companies img {
     margin: 0 auto;
+    clear: both;
 }
 .section-featured .wrapper {
     padding-bottom: 0;
@@ -1595,6 +1599,11 @@ to {
     left: 0;
     width: 100%;
     height: 100%}
+.section-featured-carrier,
+.press-home-back,
+.section-about-us {
+    background: #1c3788 !important;
+}
 .section-featured-carrier .wrapper {
     padding-bottom: 0;
 }
