--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -529,6 +529,9 @@ p {
 .navbar-right {
     margin-top: 32px!important;
 }
+.dropdown-menu > li > .active {
+    border-radius: 0 !important;
+}
 @media only screen and (max-width:768px) {
     .navbar-right {
     margin-top: 0!important;
