--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -1597,7 +1597,12 @@ to {
 .contact-info {padding: 60px 0 20px; display: table; width: 100%;}
 .contact-info .col-md-4 {display: table-cell; vertical-align: middle; float: none;}
 .contact-block {text-align: center; padding: 20px 0;}
-.contact-block img {width: 110px; display: block; margin: 0 auto;}
+.contact-block img {
+    width: 65%;
+    max-width: 90px;
+    display: block;
+    margin: 0 auto;
+}
 .contact-block h5 {font-size: 1.9em;}
 .contact-block a {color: #000000; font-size: 1.2rem;}
 .fluid-width-video-wrapper {
