--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -2799,11 +2799,14 @@ a.popover-custom--connections {
     padding: 10px 20px;
     margin: 0;
     border-radius: 4px;
+    font-size: 1.7em;
 }
 .ui-accordion-content a {
     float: right;
     font-size: .8em!important;
     font-weight: 600;
+    width: 100%;
+    height: 40px;
 }
 .ui-accordion-content p:nth-child(odd) {
     background: #1b87da;
@@ -2817,6 +2820,9 @@ a.popover-custom--connections {
 }
 .ui-accordion-content p:nth-child(2n) a {
     color: #000!important;
+}
+.ul-accordion-content .learn-more {
+    float: right;
 }
 @media (min-width:1200px) {
     .counter .counter-subtitle {
