--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -2800,6 +2800,7 @@ a.popover-custom--connections {
     margin: 0;
     border-radius: 4px;
     font-size: 1.7em;
+    height: 40px;
 }
 .ui-accordion-content a {
     float: right;
@@ -2807,6 +2808,9 @@ a.popover-custom--connections {
     font-weight: 600;
     width: 100%;
     height: 40px;
+}
+span.learn-more {
+    float: right;
 }
 .ui-accordion-content p:nth-child(odd) {
     background: #1b87da;
@@ -2821,9 +2825,7 @@ a.popover-custom--connections {
 .ui-accordion-content p:nth-child(2n) a {
     color: #000!important;
 }
-.ul-accordion-content .learn-more {
-    float: right;
-}
+
 @media (min-width:1200px) {
     .counter .counter-subtitle {
     font-size: 11px;
