--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -720,6 +720,7 @@ p {
 .btn-sp-right {
     margin-right: 10px;
 }
+/* home */
 .home h2 {
     margin-top: 0;
 }
@@ -753,6 +754,9 @@ p {
 .quote a {
     margin-top: 30px;
 }
+.home-product-back .product-btn-align {}
+.home-product-back .btn-center-2 a {float: left; margin-right: 3px;}
+.home-product-back .product-btn-align:last-child a {}
 .home-video-container {
     position: relative;
     padding-bottom: 56.25%;
@@ -3067,13 +3071,14 @@ a.popover-custom--connections {
     margin-top: 0;
 }
 .backstretch-contain .container {
-    padding: 30px 0;
+    padding: 30px 15px;
 }
 .ui-accordion-content a {
     float: none;
     display: block;
 }
-}@media only screen and (max-width:767px) {
+}
+@media only screen and (max-width:767px) {
     .androids {
     height: 313px;
 }
@@ -3112,6 +3117,7 @@ a.popover-custom--connections {
     font-size: 1.2rem;
     margin: 0;
 }
+.home-product-back .product-btn-align a {float: right !important; margin-right: 3px;}
 .section-press {
     padding-top: 0;
 }
@@ -3239,7 +3245,8 @@ a.popover-custom--hackers {
     margin: 30px auto 0;
     display: block;
 }
-}@media only screen and (max-width:520px) {
+}
+@media only screen and (max-width:520px) {
     .btn-sp-right {
     margin-right: 0;
 }
@@ -3255,7 +3262,9 @@ a.popover-custom--hackers {
 }
 .meet-visionaries .container>div {
     width: 100%}
-}@media (max-width:480px) {
+}
+
+@media (max-width:480px) {
     .section-contact-us-carrier .btn {
     white-space: normal;
 }
