--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -2323,7 +2323,8 @@ a.popover-custom--connections {
     .section-contact-us-carrier {
     text-align: center;
 }
-}.section-contact-us-carrier .h2-carrier {
+}
+.section-contact-us-carrier .h2-carrier {
     font-weight: 300;
     margin-bottom: 60px;
     margin-top: 60px;
@@ -2433,12 +2434,8 @@ a.popover-custom--connections {
 .press img {
     padding: 12px 0;
 }
-.press-latest .ccm-block-page-list-title a {
-    color: #fff;
-    font-size: 3rem;
-    font-weight: 400;
-    line-height: 3.5rem;
-}
+.press-latest .ccm-block-page-list-title a {color: #fff;font-size: 3rem;font-weight: 400;line-height: 3.5rem;}
+.press-latest .ccm-block-page-list-title a:hover {text-decoration: none;}
 .top-section {
     margin-top: 50px;
 }
