--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -61,24 +61,10 @@
 @font-face {font-family: 'Titillium Web';font-style: normal;font-weight: 700;src: local('Titillium WebBold'), local('TitilliumWeb-Bold'), url(http://fonts.gstatic.com/s/titilliumweb/v4/anMUvcNT0H1YN4FII8wpr6nZAMwsGZpiGJKtVINElMQ.woff2) format('woff2');unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;}
 /* latin */
 @font-face {font-family: 'Titillium Web';font-style: normal;font-weight: 700;src: local('Titillium WebBold'), local('TitilliumWeb-Bold'), url(http://fonts.gstatic.com/s/titilliumweb/v4/anMUvcNT0H1YN4FII8wpr8hG3LOB74UqS1hPmWaAxzQ.woff2) format('woff2');unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;}
-.btn, .chart .label-axis-y, .chart-bars li, .chart-legend .legend-label, .counter .counter-subtitle, .global-usage-title, .investors-board-advisors p, .popover-title, .product .product-type, .switch-text {
-    text-transform: uppercase;
-}
-.circle, .connection--hor {
-    -moz-animation-iteration-count: infinite;
-}
-.attacks-list, .chart-legend, .chart-lines, .counters, .features-list, .recent-news ul, .target-list {
-    list-style: none;
-}
-body {
-    line-height: 18px;
-    font: 62.5%/1.55'Open Sans', sans-serif;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    color: #5a5a5a;
-    font-size: 10px;
-    font-size: 1rem;
-}
+.btn, .chart .label-axis-y, .chart-bars li, .chart-legend .legend-label, .counter .counter-subtitle, .global-usage-title, .investors-board-advisors p, .popover-title, .product .product-type, .switch-text {text-transform: uppercase;}
+.circle, .connection--hor {-moz-animation-iteration-count: infinite;}
+.attacks-list, .chart-legend, .chart-lines, .counters, .features-list, .recent-news ul, .target-list {list-style: none;}
+body {line-height: 18px;font: 62.5%/1.55'Open Sans', sans-serif;text-rendering: optimizeLegibility;-webkit-font-smoothing: antialiased;color: #5a5a5a;font-size: 10px;font-size: 1rem;}
 img {
     border: 0;
 }
@@ -1504,6 +1490,16 @@ to {
 }
 .section-video h2 {
     margin-top: 70px;
+}
+.section-video-background {
+    background: linear-gradient(45deg, #1d2879 0%, #1b87da 100%) repeat;
+    background: -moz-linear-gradient(45deg, #1d2879 0%, #1b87da 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, 45deg, color-stop(0%,#1d2879), color-stop(100%,##1b87da)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left,  #1d2879 0%,#1b87da 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left,  #1d2879 1%,#1b87da 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left,  #1d2879 1%,#1b87da 100%); /* IE10+ */
+    background: linear-gradient(to right,  #1d2879 1%,#1b87da 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#283a83', endColorstr='#1b7bce',GradientType=1 );
 }
 .video-container {
     margin-top: 0;
@@ -3170,45 +3166,20 @@ span.learn-more {float: none; font-weight: 100; display: none;}
 .feature-type .feature-icon--multidevice {
     background-position: left -497px;
 }
-}.horizontalpad, .textpadding {
-    padding: 15px 0!important;
 }
-.marginbot97 {
-    margin-bottom: 97px;
-}
-.marginbot90 {
-    margin-bottom: 90px!important;
-}
-.marginbot80 {
-    margin-bottom: 80px!important;
-}
-.marginbot70 {
-    margin-bottom: 70px!important;
-}
-.marginbot60 {
-    margin-bottom: 60px!important;
-}
-.marginbot50 {
-    margin-bottom: 50px!important;
-}
-.marginbot40 {
-    margin-bottom: 40px!important;
-}
-.marginbot25 {
-    margin-bottom: 25px!important;
-}
-.marginbot20 {
-    margin-bottom: 20px!important;
-}
-.marginbot15 {
-    margin-bottom: 15px!important;
-}
-.marginbot10 {
-    margin-bottom: 10px!important;
-}
-.marginbot5 {
-    margin-bottom: 5px!important;
-}
+.horizontalpad, .textpadding {padding: 15px 0!important;}
+.marginbot97 {margin-bottom: 97px;}
+.marginbot90 {margin-bottom: 90px!important;}
+.marginbot80 {margin-bottom: 80px!important;}
+.marginbot70 {margin-bottom: 70px!important;}
+.marginbot60 {margin-bottom: 60px!important;}
+.marginbot50 {margin-bottom: 50px!important;}
+.marginbot40 {margin-bottom: 40px!important;}
+.marginbot25 {margin-bottom: 25px!important;}
+.marginbot20 {margin-bottom: 20px!important;}
+.marginbot15 {margin-bottom: 15px!important;}
+.marginbot10 {margin-bottom: 10px!important;}
+.marginbot5 {margin-bottom: 5px!important;}
 .leftfadewhite {
     background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 1) 50%) right top;
     background: -webkit-gradient(linear, left top, right top, color-stop(20%, rgba(255, 255, 255, 0)), color-stop(50%, rgba(255, 255, 255, 1))) right top;
@@ -3216,7 +3187,7 @@ span.learn-more {float: none; font-weight: 100; display: none;}
     background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 1) 50%) right top;
     background: -ms-linear-gradient(left, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 1) 50%) right top;
     background: linear-gradient(to right, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 1) 50%) right top;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff',  endColorstr='#ffffff',  GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff',  endColorstr='#ffffff',  GradientType=1);
 }
 .rightfadeblue {
     background: -moz-linear-gradient(left, rgba(27, 123, 206, 0) 0, rgba(40, 58, 131, 1) 75%) right top;
@@ -3225,7 +3196,7 @@ span.learn-more {float: none; font-weight: 100; display: none;}
     background: -o-linear-gradient(left, rgba(27, 123, 206, 0) 0, rgba(40, 58, 131, 1) 75%) right top;
     background: -ms-linear-gradient(left, rgba(27, 123, 206, 0) 0, rgba(40, 58, 131, 1) 75%) right top;
     background: linear-gradient(to right, rgba(27, 123, 206, 0) 0, rgba(40, 58, 131, 1) 75%) right top;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#001b7bce',  endColorstr='#283a83',  GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#001b7bce', endColorstr='#283a83', GradientType=1);
 }
 .leftfadeblue {
     background: -moz-linear-gradient(left, rgba(40, 58, 131, 1) 25%, rgba(27, 123, 206, 0) 100%) left top;
@@ -3234,24 +3205,18 @@ span.learn-more {float: none; font-weight: 100; display: none;}
     background: -o-linear-gradient(left, rgba(40, 58, 131, 1) 25%, rgba(27, 123, 206, 0) 100%) left top;
     background: -ms-linear-gradient(left, rgba(40, 58, 131, 1) 25%, rgba(27, 123, 206, 0) 100%) left top;
     background: linear-gradient(to right, rgba(40, 58, 131, 1) 25%, rgba(27, 123, 206, 0) 100%) left top;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#283a83',  endColorstr='#001b7bce',  GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#283a83', endColorstr='#001b7bce',GradientType=1);
 }
 .fullfadeblue {
-    bbackground: #283a83;
+    background: #283a83;
     background: -moz-linear-gradient(left, rgba(40, 58, 131, 1) 0, rgba(27, 123, 206, 1) 100%) left top;
     background: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(40, 58, 131, 1)), color-stop(100%, rgba(27, 123, 206, 1))) left top;
     background: -webkit-linear-gradient(left, rgba(40, 58, 131, 1) 0, rgba(27, 123, 206, 1) 100%) left top;
     background: -o-linear-gradient(left, rgba(40, 58, 131, 1) 0, rgba(27, 123, 206, 1) 100%) left top;
     background: -ms-linear-gradient(left, rgba(40, 58, 131, 1) 0, rgba(27, 123, 206, 1) 100%) left top;
     background: linear-gradient(to right, rgba(40, 58, 131, 1) 0, rgba(27, 123, 206, 1) 100%) left top;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#283a83',  endColorstr='#1b7bce',  GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#283a83', endColorstr='#1b7bce',GradientType=1 );
 }
-.align-center-imp {
-    text-align: center!important;
-}
-.align-right-imp {
-    text-align: right!important;
-}
-.align-left-imp {
-    text-align: left!important;
-}
+.align-center-imp {text-align: center!important;}
+.align-right-imp {text-align: right!important;}
+.align-left-imp {text-align: left!important;}
