--- a/application/themes/af/css/styles.css
+++ b/application/themes/af/css/styles.css
@@ -102,6 +102,7 @@ p {
     padding: 50px 30px;
     overflow: hidden;
 }
+.home-choose-download .wrapper {overflow: visible;}
 .wrapper--small {
     padding: 30px;
 }
@@ -1290,7 +1291,7 @@ to {
     background-color: #dddee1;
     opacity: .85;
     filter: alpha(opacity=85);
-    right: 0;
+    right: -10px;
     z-index: 10;
     transition: all .4s ease-in-out 0s;
 }
@@ -2660,7 +2661,8 @@ span.learn-more {
 .attack-list-wrapper {
     height: 234px;
 }
-}@media only screen and (max-width:1200px) {
+}
+@media only screen and (max-width:1200px) {
     .connection {
     width: 215px;
 }
@@ -2928,6 +2930,7 @@ a.popover-custom--connections {
 .chart-bars li .wrapper-bar .chart-bar-anchorfree, .chart-bars li .wrapper-bar .chart-bar-comscore {
     width: 10px;
 }
+.chart-bars li .wrapper-bar .chart-bar-comscore {right: 0;}
 .chart-legend .legend-label {
     font-size: 12px;
     font-size: 1.2rem;
